--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,11 @@
   "authors": [
     "Simeon Velichkov <simeonvelichkov@gmail.com> (http://simov.github.io)"
   ],
+
+  "dependencies": {
+    "jquery": ">=1.8.3",
+    "jquery-mousewheel": ">=3.1.0"
+  },
   
   "main": [
     "lib/jquery.simplr.smoothscroll.min.js"
